Formatting and updated of pom